force-app/main/default/objects/copado__Selenium_Test_Run__c/fields/copado__Base_URL__c.field-meta.xml
<CustomField>
    <fullName>copado__Base_URL__c</fullName>
    <description>Optional Base URL where this test will be run, if Org Credentials are not specified.</description>
    <inlineHelpText>Optional Base URL where this test will be run, if Org Credentials are not specified.</inlineHelpText>
    <label>Base URL</label>
    <type>Url</type>
</CustomField>