force-app/main/default/objects/copado__Selenium_Test_Run__c/fields/copado__Last_Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>copado__Last_Status_Icon__c</fullName>
    <formula>IMAGE( 
CASE(TEXT(copado__Last_Status__c), 

&#39;Completed with errors&#39;, &#39;/resource/&#39; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c=&#39;none&#39;,&#39;&#39;,if(isblank($Setup.copado__Settings__c.copado__Namespace__c),&#39;copado__&#39;,$Setup.copado__Settings__c.copado__Namespace__c)) &amp; &#39;Statics/img/icons/warning16.png&#39;, 

&#39;Completed successfully&#39;, &#39;/resource/&#39; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c=&#39;none&#39;,&#39;&#39;,if(isblank($Setup.copado__Settings__c.copado__Namespace__c),&#39;copado__&#39;,$Setup.copado__Settings__c.copado__Namespace__c)) &amp; &#39;Statics/img/icons/confirm16.png&#39;, 

&#39;Completed with warnings&#39;, &#39;/resource/&#39; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c=&#39;none&#39;,&#39;&#39;,if(isblank($Setup.copado__Settings__c.copado__Namespace__c),&#39;copado__&#39;,$Setup.copado__Settings__c.copado__Namespace__c)) &amp; &#39;Statics/img/icons/confirm16.png&#39;, 


&#39;In Progress&#39;, &#39;/resource/&#39; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c=&#39;none&#39;,&#39;&#39;,if(isblank($Setup.copado__Settings__c.copado__Namespace__c),&#39;copado__&#39;,$Setup.copado__Settings__c.copado__Namespace__c)) &amp; &#39;Statics/img/icons/loading.gif&#39;,

&#39;Queued&#39;, &#39;/resource/&#39; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c=&#39;none&#39;,&#39;&#39;,if(isblank($Setup.copado__Settings__c.copado__Namespace__c),&#39;copado__&#39;,$Setup.copado__Settings__c.copado__Namespace__c)) &amp; &#39;Statics/img/icons/loading.gif&#39;, 

&#39;/s.gif&#39;),

TEXT(copado__Last_Status__c) 
)</formula>
    <label>Last Status Icon</label>
    <type>Text</type>
</CustomField>