force-app/main/default/objects/copado__Selenium_Test_Run__c/validationRules/copado__Credentials_or_BaseURL.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__Credentials_or_BaseURL</fullName>
    <active>true</active>
    <description>Base url cannot be set if org credentials is defined</description>
    <errorConditionFormula>NOT(ISBLANK(copado__Org_Credential__c)) &amp;&amp; NOT(ISBLANK(copado__Base_URL__c))</errorConditionFormula>
    <errorMessage>Base URL cannot be populated if Org Credentials were selected.</errorMessage>
</ValidationRule>